
		----------------------------------

ChangeLog about GNU GLOBAL

Current, Shigio Yamaguchi  <shigio@gnu.org>

	* conf.c: add GPATH,GTAGS,GRTAGS,GSYMS,tags,TAGS to DEFAULTSKIP.
	* find.c: decrease dependency on find(1).
	  remove length argument from find_read().
	* global.texi: reconstuct documentation.
	* globash.rc: --no-wait option added to emacsclient.
	* gozilla: gozilla directory added.

Jan 22 2002, Shigio Yamaguchi  <shigio@gnu.org>

	* htags: build trouble fixed.
	  global.cgi wasn't generated correctly.

Jan 10 2002, Shigio Yamaguchi  <shigio@gnu.org>

	* DJGPP support code added.
	  Jason Hood ported Global-4.0.1 into DJGPP environment.
	  I have merged his code into this version.
	* gtags.pl added.
	* Convert.pl added. From now on, usage, help, man, info are
	  generated automatically by this script from */manual.in files.
	* gtags, global: make exit code rule:
	  0:normal, 1:exception, 2:usage, 3:GTAGS not found.

Nov 23 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* gtags: format char for strftime() changed (%e -> %d).
	* gtags: the path of gctags changed from 'gctags' to '$bindir/gctags'.
	* htags: use gtags --date and gtags --pwd instead of date and pwd.
	  Above changes are for Windows 32 environment.
	* rename file: pathop.[ch] -> gpathop.[ch].
	* rename functions: pathxxx -> gpath_xxx, gtagsxxx -> gtags_xxx.
	* rename functions: ffindxxx -> find_xxx, gfindxxx -> gfind_xxx.
	* libglibc/snprintf.c added.
	* move gfind_xxx from libutil/find.c to libutil/gpathop.c.

July 31 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* VERSION: removed.
	* compat.h: moved to libdb/.
	* machine/: removed.
	* htags: WWW link in hypertext was modified.
	* gtags.c, global.c: rewrite code for putenv(3) using malloc(3).

July 12 2001, Shigio Yamaguchi  <shigio@tamacom.com>

	* config variable HAVE_SNPRINTF and AC_FUNC_ALLOCA added.
	* stop using MAXENVLEN because it brings buffer overflow.
	* htags.pl: the value of id changed from src directory
	  to HTML directory.