@@ -27,6 +27,7 @@ Current version by Shigio Yamaguchi
   but also other files like 'README'.
 * htags: configuration variable other_files added.
 * htags: configuration variable definition_header={no|after|before} added.
+* global: path conversion optimized and bug fixed.
 
 Version 4.3.1 - Jan 22 2002, by Shigio Yamaguchi
 
